--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
             <li>Inception</li>
             <li>American History X</li>
         </ol>
+    <br>
+    <h3> How many have you seen?</h3>
     </main>
 
     
