--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
         <h3>Here are the top ten movies of all time, according to IMDB</h3>
         <ol>
             <li>The Shawshank Redemption</li>
+            <li>The Godfather</li>
+            <li>The Dark Knight</li>
             <li>The Godfather Part II</li>
-            <li>Seven</li>
-            <li>Fight Club</li>
-            <li>Forrest Gump</li>
-            <li>One Flew Over the Cuckoos Nest</li>
-            <li>Goodfellas</li>
-            <li>The Usual Suspects</li>
-            <li>Inception</li>
-            <li>American History X</li>
+            <li>12 Angry Men</li>
+            <li>Schindlers List</li>
+            <li>The Lord of the Rings: The Return of the King </li>
+            <li>Pulp Fiction</li>
+            <li>The Lord of the Rings: The Fellowship of the Ring</li>
+            <li>The Good, the Bad and the Ugly</li>
         </ol>
     <br>
     <h3> How many have you seen?</h3>
